task 4 done, empty file exception fixed